<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/night_mode_pref_key"
        android:summaryOff="@string/night_mode_off_summary"
        android:summaryOn="@string/night_mode_on_summary"
        android:title="@string/night_mode" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_view_mode_entries"
        android:entryValues="@array/pref_view_mode_entry_value"
        android:key="@string/view_mode_pref_key"
        android:summary="%s"
        android:title="@string/view_mode_title" />

    <PreferenceScreen android:title="@string/pass_mode">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pass_mode_pref_key"
            android:summaryOff="@string/pass_mode_off_summary"
            android:summaryOn="@string/pass_mode_on_summary"
            android:title="@string/pass_mode" />

        <EditTextPreference
            android:inputType="numberPassword"
            android:key=""
            android:title="@string/pass_code_title" />
    </PreferenceScreen>

</PreferenceScreen>
