<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/customdialog_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_dialog_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_setDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:cursorVisible="true"
        android:focusable="false"
        android:hint="@string/reminder_dialog_reminder_dialog_date_hint"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_setTime"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:cursorVisible="true"
        android:focusable="false"
        android:hint="@string/reminder_dialog_time_hint"
        android:textSize="18sp" />

    <TableRow
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:weightSum="7">

        <Button
            android:id="@+id/btn_cancel_time"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/reminder_dialog_btn_cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_save_time"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/reminder_dialog_btn_save"
            android:textAllCaps="false" />

    </TableRow>

</LinearLayout>