<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_none"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/none_priority"
            android:textAllCaps="false"
            android:textColor="@color/blue_500"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_low"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/low_priority"
            android:textAllCaps="false"
            android:textColor="@color/blue_500"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_medium"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/medium_priority"
            android:textAllCaps="false"
            android:textColor="@color/blue_500"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_high"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/high_priority"
            android:textAllCaps="false"
            android:textColor="@color/blue_500"
            android:textSize="12sp" />

    </TableRow>
</android.support.v7.widget.CardView>