<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_800_trans">

    <LinearLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="60dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_drawer_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tv_label_createdDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/lbl_created_date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_content_createdDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_label_modifiedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/lbl_modified_date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_content_modifiedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_divider_date"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/divider_shape" />

        <TextView
            android:id="@+id/tv_color_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/lbl_color"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_color"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp" />

        <ImageView
            android:id="@+id/iv_divider_color"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/divider_shape" />

        <TextView
            android:id="@+id/tv_label_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/lbl_priority"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_content_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>